--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,7 @@
   }
   
   .formContainer {
-    background-color: #a7bcff;
+    background-color: #B4D2E7;
     height: 100vh;
     display: flex;
     align-items: center;
