--- a/src/style.scss
+++ b/src/style.scss
@@ -80,6 +80,11 @@
         cursor: pointer;
       }
 
+      .dropbox {
+        width: 150px;
+        font-size: large;
+      }
+
       label {
         display: flex;
         align-items: center;
@@ -104,19 +109,19 @@
 .home {
   background-color: #586994;
   height: 100vh;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   .container {
-    border: 1px solid white;
-    border-radius: 10px;
-    width: 65%;
-    height: 80%;
+
+    width: 100%;
+    height: 100%;
     display: flex;
     overflow: hidden;
     @include tablet {
-      width: 90%;
+      width: 100%;
     }
 
     .sidebar {
