--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,9 @@
 }
 
 @media screen and (max-width: 480px) {
+  .chat:hover {
+    flex: 3;
+  }
   .container {
     flex-direction: column;
     .chat {
@@ -217,8 +220,9 @@
         }
       }
     }
+    
     .chat {
-      flex: 2;
+      flex: 1;
       overflow-y: scroll;
 
       .createGroupChat {
